# libadwaita-fake-guessing-game

./: README.md  demo.terminnus.fakeguessinggame.json  meson.build
data/: demo.terminnus.fakeguessinggame.desktop.in  demo.terminnus.fakeguessinggame.gschema.xml  demo.terminnus.fakeguessinggame.metainfo.xml.in  demo.terminnus.fakeguessinggame.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: fake-guessing-game.gresource.xml  fake-guessing-game.in  main.py  meson.build  window.blp  window.py
